src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'auto'", "'break'", "'boolean'", "'do'", "'else'", 
                     "'false'", "'float'", "'for'", "'function'", "'if'", 
                     "'integer'", "'return'", "'string'", "'true'", "'void'", 
                     "'while'", "'out'", "'continue'", "'of'", "'inherit'", 
                     "'array'", "'='", "';'", "','", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "'.'", "':'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", 
                     "'>'", "'<'", "'>='", "'<='", "'::'" ]

    symbolicNames = [ "<INVALID>", "BLOCK_COMMENT", "LINE_COMMENT", "INTLIT", 
                      "INLIT_ERROR_0", "FLOATLIT", "BOOLLIT", "STRINGLIT", 
                      "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", "FALSE", 
                      "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", 
                      "STRING", "TRUE", "VOID", "WHILE", "OUT", "CONTINUE", 
                      "OF", "INHERIT", "ARRAY", "EQUAL", "SEMI", "COMMA", 
                      "LB", "RB", "LCB", "RCB", "LSB", "RSB", "DOT", "DDOT", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", 
                      "EQUALTO", "NOTEQ", "GREAT", "LESS", "GREATEQ", "LESSEQ", 
                      "SCOPE", "IDENTIFIER", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_vardecl = 2
    RULE_varlist = 3
    RULE_varwithexprdecl = 4
    RULE_varini = 5
    RULE_funcdecl = 6
    RULE_inherit = 7
    RULE_return_type = 8
    RULE_paralist = 9
    RULE_parameter = 10
    RULE_mt_type = 11
    RULE_stmt = 12
    RULE_assign_stmt = 13
    RULE_lhs = 14
    RULE_if_stmt = 15
    RULE_fullif = 16
    RULE_halfif = 17
    RULE_for_stmt = 18
    RULE_init_expr = 19
    RULE_cond_expr = 20
    RULE_update_expr = 21
    RULE_while_stmt = 22
    RULE_do_while_stmt = 23
    RULE_return_stmt = 24
    RULE_call_stmt = 25
    RULE_exprlist = 26
    RULE_break_stmt = 27
    RULE_continue_stmt = 28
    RULE_block_stmt = 29
    RULE_body = 30
    RULE_bodypara = 31
    RULE_expr = 32
    RULE_expr1 = 33
    RULE_expr2 = 34
    RULE_expr3 = 35
    RULE_expr4 = 36
    RULE_expr5 = 37
    RULE_expr6 = 38
    RULE_expr7 = 39
    RULE_operands = 40
    RULE_literial = 41
    RULE_func_call = 42
    RULE_index_op = 43
    RULE_mul_div = 44
    RULE_relational = 45
    RULE_atomic_type = 46
    RULE_array_type = 47
    RULE_intlist = 48
    RULE_arraylit = 49
    RULE_arraylitlist = 50
    RULE_arraylit_para = 51

    ruleNames =  [ "program", "declaration", "vardecl", "varlist", "varwithexprdecl", 
                   "varini", "funcdecl", "inherit", "return_type", "paralist", 
                   "parameter", "mt_type", "stmt", "assign_stmt", "lhs", 
                   "if_stmt", "fullif", "halfif", "for_stmt", "init_expr", 
                   "cond_expr", "update_expr", "while_stmt", "do_while_stmt", 
                   "return_stmt", "call_stmt", "exprlist", "break_stmt", 
                   "continue_stmt", "block_stmt", "body", "bodypara", "expr", 
                   "expr1", "expr2", "expr3", "expr4", "expr5", "expr6", 
                   "expr7", "operands", "literial", "func_call", "index_op", 
                   "mul_div", "relational", "atomic_type", "array_type", 
                   "intlist", "arraylit", "arraylitlist", "arraylit_para" ]

    EOF = Token.EOF
    BLOCK_COMMENT=1
    LINE_COMMENT=2
    INTLIT=3
    INLIT_ERROR_0=4
    FLOATLIT=5
    BOOLLIT=6
    STRINGLIT=7
    AUTO=8
    BREAK=9
    BOOLEAN=10
    DO=11
    ELSE=12
    FALSE=13
    FLOAT=14
    FOR=15
    FUNCTION=16
    IF=17
    INTEGER=18
    RETURN=19
    STRING=20
    TRUE=21
    VOID=22
    WHILE=23
    OUT=24
    CONTINUE=25
    OF=26
    INHERIT=27
    ARRAY=28
    EQUAL=29
    SEMI=30
    COMMA=31
    LB=32
    RB=33
    LCB=34
    RCB=35
    LSB=36
    RSB=37
    DOT=38
    DDOT=39
    ADD=40
    SUB=41
    MUL=42
    DIV=43
    MOD=44
    NOT=45
    AND=46
    OR=47
    EQUALTO=48
    NOTEQ=49
    GREAT=50
    LESS=51
    GREATEQ=52
    LESSEQ=53
    SCOPE=54
    IDENTIFIER=55
    WS=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58
    ERROR_CHAR=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclarationContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 104
                self.declaration()
                self.state = 107 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.IDENTIFIER):
                    break

            self.state = 109
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MT22Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(MT22Parser.VarlistContext,0)


        def DDOT(self):
            return self.getToken(MT22Parser.DDOT, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def mt_type(self):
            return self.getTypedRuleContext(MT22Parser.Mt_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def varwithexprdecl(self):
            return self.getTypedRuleContext(MT22Parser.VarwithexprdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.varlist(0)
                self.state = 116
                self.match(MT22Parser.DDOT)
                self.state = 119
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING, MT22Parser.ARRAY]:
                    self.state = 117
                    self.mt_type()
                    pass
                elif token in [MT22Parser.AUTO]:
                    self.state = 118
                    self.match(MT22Parser.AUTO)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 121
                self.match(MT22Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.varwithexprdecl()
                self.state = 124
                self.match(MT22Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def varlist(self):
            return self.getTypedRuleContext(MT22Parser.VarlistContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)



    def varlist(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MT22Parser.VarlistContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_varlist, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(MT22Parser.IDENTIFIER)
            self._ctx.stop = self._input.LT(-1)
            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MT22Parser.VarlistContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_varlist)
                    self.state = 131
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 132
                    self.match(MT22Parser.COMMA)
                    self.state = 133
                    self.match(MT22Parser.IDENTIFIER) 
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class VarwithexprdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varini(self):
            return self.getTypedRuleContext(MT22Parser.VariniContext,0)


        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def varwithexprdecl(self):
            return self.getTypedRuleContext(MT22Parser.VarwithexprdeclContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varwithexprdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarwithexprdecl" ):
                return visitor.visitVarwithexprdecl(self)
            else:
                return visitor.visitChildren(self)




    def varwithexprdecl(self):

        localctx = MT22Parser.VarwithexprdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varwithexprdecl)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.varini()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(MT22Parser.IDENTIFIER)
                self.state = 141
                self.match(MT22Parser.COMMA)
                self.state = 142
                self.varwithexprdecl()
                self.state = 143
                self.match(MT22Parser.COMMA)
                self.state = 144
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariniContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def DDOT(self):
            return self.getToken(MT22Parser.DDOT, 0)

        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def mt_type(self):
            return self.getTypedRuleContext(MT22Parser.Mt_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varini

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarini" ):
                return visitor.visitVarini(self)
            else:
                return visitor.visitChildren(self)




    def varini(self):

        localctx = MT22Parser.VariniContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_varini)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(MT22Parser.IDENTIFIER)
            self.state = 149
            self.match(MT22Parser.DDOT)
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING, MT22Parser.ARRAY]:
                self.state = 150
                self.mt_type()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 151
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 154
            self.match(MT22Parser.EQUAL)
            self.state = 155
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def DDOT(self):
            return self.getToken(MT22Parser.DDOT, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def return_type(self):
            return self.getTypedRuleContext(MT22Parser.Return_typeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def paralist(self):
            return self.getTypedRuleContext(MT22Parser.ParalistContext,0)


        def inherit(self):
            return self.getTypedRuleContext(MT22Parser.InheritContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(MT22Parser.IDENTIFIER)
            self.state = 158
            self.match(MT22Parser.DDOT)
            self.state = 159
            self.match(MT22Parser.FUNCTION)
            self.state = 160
            self.return_type()
            self.state = 161
            self.match(MT22Parser.LB)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.OUT) | (1 << MT22Parser.INHERIT) | (1 << MT22Parser.IDENTIFIER))) != 0):
                self.state = 162
                self.paralist(0)


            self.state = 165
            self.match(MT22Parser.RB)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 166
                self.inherit()


            self.state = 169
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InheritContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_inherit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInherit" ):
                return visitor.visitInherit(self)
            else:
                return visitor.visitChildren(self)




    def inherit(self):

        localctx = MT22Parser.InheritContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_inherit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(MT22Parser.INHERIT)
            self.state = 172
            self.match(MT22Parser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mt_type(self):
            return self.getTypedRuleContext(MT22Parser.Mt_typeContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_return_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_type" ):
                return visitor.visitReturn_type(self)
            else:
                return visitor.visitChildren(self)




    def return_type(self):

        localctx = MT22Parser.Return_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_return_type)
        try:
            self.state = 177
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING, MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.mt_type()
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 175
                self.match(MT22Parser.VOID)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 3)
                self.state = 176
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParalistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self):
            return self.getTypedRuleContext(MT22Parser.ParameterContext,0)


        def paralist(self):
            return self.getTypedRuleContext(MT22Parser.ParalistContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paralist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParalist" ):
                return visitor.visitParalist(self)
            else:
                return visitor.visitChildren(self)



    def paralist(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MT22Parser.ParalistContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_paralist, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.parameter()
            self._ctx.stop = self._input.LT(-1)
            self.state = 187
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MT22Parser.ParalistContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_paralist)
                    self.state = 182
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 183
                    self.match(MT22Parser.COMMA)
                    self.state = 184
                    self.parameter() 
                self.state = 189
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def DDOT(self):
            return self.getToken(MT22Parser.DDOT, 0)

        def mt_type(self):
            return self.getTypedRuleContext(MT22Parser.Mt_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = MT22Parser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 190
                self.match(MT22Parser.INHERIT)


            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 193
                self.match(MT22Parser.OUT)


            self.state = 196
            self.match(MT22Parser.IDENTIFIER)
            self.state = 197
            self.match(MT22Parser.DDOT)
            self.state = 200
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING, MT22Parser.ARRAY]:
                self.state = 198
                self.mt_type()
                pass
            elif token in [MT22Parser.AUTO]:
                self.state = 199
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)
